--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ pbkdf2 = "*"
 env_logger = "*"
 log = "0.4.11"
 lazy_static = "1.4"
-mongodb = "1"
+mongodb = "1.0.0"
+futures-async-stream = "0.2"
+bson = "*"
 
 shared = { path = "../shared" }
