--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ env_logger = "*"
 log = "0.4.11"
 lazy_static = "1.4"
 mongodb = "1.0.0"
-arangors = {version = "0.4", features = ["surf_async"], default-features = false}
+arangors = {version = "0.4"}#, features = ["surf_async"], default-features = false}
 bson = "*"
 serde_json = "*"
 
